--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
 A battle royale where you have to out-type your opponents
+
+![Early Example](https://github.com/Craigievar/typespeed_br/blob/master/static/eximg.png)
